--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
 }
 
 /* Шапка */
-.header {
+header {
     display: flex;
     background: linear-gradient(135deg, var(--gradient-start) 0%, var(--gradient-end) 100%);
     color: white;
@@ -133,9 +133,9 @@ body {
     transition: all 0.3s ease;
 }
 
-.theme-toggle-btn:hover {
+/* .theme-toggle-btn:hover {
     border-color: var(--primary-dark);
-}
+} */
 
 .theme-toggle-icon {
     display: block;
@@ -222,10 +222,10 @@ body {
     transition: all 0.3s ease;
 }
 
-.skill-with-icon:hover {
+/* .skill-with-icon:hover {
     background: var(--border-color);
     transform: translateY(-2px);
-}
+} */
 
 .skill-with-icon i {
     color: var(--primary-color);
@@ -301,10 +301,10 @@ body {
     transition: all 0.3s ease;
 }
 
-.hobby:hover {
+/* .hobby:hover {
     background: var(--primary-color);
     color: white;
-}
+} */
 
 /* Адаптивность */
 @media (max-width: 768px) {
